--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "materialize-css": "^1.0.0",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
+    "react-modal": "^3.6.1",
     "react-redux": "^5.1.0",
     "react-scripts": "2.1.1",
     "redux": "^4.0.1",
